cmake_minimum_required(VERSION 3.10)
project(Dishcam)
set(THREADS_PREFER_PTHREAD_FLAG ON)
set(CMAKE_CXX_STANDARD 11)
find_package(Threads REQUIRED)
find_package(OpenCV REQUIRED)
#find_package(Queue REQUIRED)
#find_package(Mutex REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(Dishcam src/main.cpp src/ThreaddedQueue.cpp)
target_link_libraries(Dishcam ${OpenCV_LIBS})
target_link_libraries(Dishcam Threads::Threads)
#list( APPEND CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS} -g -pthread `pkg-config --cflags --libs opencv`")